# dnd

./: AGENTS.md  NOTICE.md  README.md  ROADMAP.md  pyproject.toml
examples/: character_builder.py  exercise_library.py
examples/character_builder_static/: app.js  index.html  styles.css
src/dnd5e/: __init__.py  abilities.py  ancestries.py  character.py  classes.py  combat.py  conditions.py  content.py  creatures.py  dice.py  effects.py  encounters.py  equipment.py  hit_points.py  magic_items.py  progression.py  references.py  resources.py  serialization.py  sheets.py  skills.py  spells.py  types.py
src/dnd5e/data/: __init__.py  ancestries.json  classes.json  conditions.json  creatures.json  encounters.json  equipment.json  features.json  references.json  spells.json
tests/: test_ancestries.py  test_character_builder.py  test_character_sheets.py  test_combat_runtime.py  test_content.py  test_creatures.py  test_effects.py  test_encounters.py  test_equipment.py  test_examples.py  test_hit_points.py  test_magic_items.py  test_progression.py  test_references.py  test_resources.py  test_rules.py  test_serialization.py  test_spells.py
