[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dnd5e-rules"
version = "0.1.0"
description = "A formalized D&D 5e-compatible rules and mechanics library."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Erik" }
]
keywords = ["dnd", "5e", "srd", "tabletop", "rpg"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment :: Role-Playing"
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
  "pyright>=1.1,<2",
  "ruff>=0.13,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dnd5e"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pyright]
include = ["src", "tests", "examples"]
extraPaths = ["src"]
pythonVersion = "3.11"
